# XcodeReleases

./: CMakeLists.txt  Main.qml  README.md  main.cpp  xcodedata.cpp  xcodedata.hpp
